fix: Fix incorrect `text-wrap` property in CSS

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,6 @@
 
 @layer utilities {
   .text-balance {
-    text-wrap: balance;
+    word-wrap: break-word;
   }
 }
